[package]
name = "zeiver"
version = "0.5.0"
authors = ["ZimCodes <23222943+ZimCodes@users.noreply.github.com>"]
edition = "2018"
description = "Web crawler designed for downloading content from ODs"
readme = "README.md"
repository = "https://github.com/ZimCodes/Zeiver"
keywords = ["crawler","downloader","tool","utility","web"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crawler",
    "scraper",
    "cmd_opts",
    "downloader",
    "http",
    "recorder",
    "asset"
]

[dependencies]
crawler = {path = "./crawler"}
cmd_opts = {path = "./cmd_opts"}
reqwest = "0.11.4"
tokio = { version = "1.10.1", features = ["time","rt","macros","rt-multi-thread"] }
