[package]
name = "zeiver"
version = "0.8.3"
authors = ["ZimCodes <23222943+ZimCodes@users.noreply.github.com>"]
edition = "2021"
description = "Web crawler designed to scrape, record, download, & scan content from ODs"
readme = "README.md"
repository = "https://github.com/ZimCodes/Zeiver"
keywords = ["crawler","downloader","tool","utility","web"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crawler",
    "scraper",
    "cmd_opts",
    "downloader",
    "grabber",
    "recorder",
    "asset",
    "logger",
    "compat"
]

[dependencies]
crawler = {path = "./crawler"}
cmd_opts = {path = "./cmd_opts"}
logger = {path = "./logger"}
reqwest = "0.11.4"
tokio = { version = "1.10.1", features = ["time","rt","macros","rt-multi-thread"] }
