[package]
name = "asset"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = ">=1.4.0"
regex = ">=1.5.4"
url = ">=2.2.2"
serde = {version = "~1.0.130",features = ["derive"] }
serde_json = ">=1.0.68"
urlencoding = ">=2.1.0"