[package]
name = "crawler"
version = "0.2.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
scraper = {path = "../scraper"}
downloader = {path = "../downloader"}
cmd_opts = {path = "../cmd_opts"}
recorder = {path = "../recorder"}
reqwest = "0.11.4"