[package]
name = "crawler"
version = "0.4.1-1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
scraper = {path = "../scraper"}
downloader = {path = "../downloader"}
cmd_opts = {path = "../cmd_opts"}
recorder = {path = "../recorder"}
grabber = {path = "../grabber" }
logger = {path = "../logger"}
asset = {path = "../asset"}
reqwest = "~0.11.4"