[package]
name = "downloader"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = {path = "../scraper"}
grabber = {path = "../grabber" }
recorder = {path = "../recorder"}
asset = {path = "../asset"}
logger = {path = "../logger"}
compat = {path = "../compat"}
bytes = "1.1.0"
lazy_static = "1.4.0"
regex = "1.5.4"
mime = "0.3.16"
reqwest = "0.11.4"
tokio = { version = "1.10.1", features = ["fs","io-util"] }