[package]
name = "recorder"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = {path = "../scraper"}
asset = {path = "../asset"}
logger = {path = "../logger"}
tokio = { version = "1.10.1", features = ["fs","io-util"] }
serde_json = "1.0.68"