[package]
name = "recorder"
version = "0.5.0-1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = {path = "../scraper"}
asset = {path = "../asset"}
logger = {path = "../logger"}
compat = {path = "../compat"}
tokio = { version = "1.10.1", features = ["fs","io-util"] }
serde_json = "1.0.68"