[package]
name = "scraper"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = {path = "../http"}
asset = {path = "../asset"}
lazy_static = "1.4.0"
url = "2.2.2"
regex = "1.5.4"
select = "0.5.0"
reqwest = "0.11.4"
tokio = { version = "1.10.1", features = ["fs","io-util"] }