[package]
name = "scraper"
version = "0.6.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grabber = {path = "../grabber" }
asset = {path = "../asset"}
logger = {path = "../logger"}
lazy_static = "1.4.0"
url = "2.2.2"
regex = "1.5.4"
select = "0.5.0"
reqwest = "0.11.4"
tokio = { version = "1.10.1", features = ["fs","io-util"] }