[package]
name = "scraper"
version = "0.6.5-2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grabber = {path = "../grabber" }
asset = {path = "../asset"}
logger = {path = "../logger"}
lazy_static = ">=1.4.0"
url = "2.*"
regex = ">=1.5.4"
select = "0.5.0"
reqwest = ">=0.11.4"
tokio = { version = "1.*", features = ["fs","io-util"] }